--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "start": "mcp-server --port 4444 --tools ./tools"
   },
   "dependencies": {
-    "@modelcontextprotocol/server": "github:modelcontextprotocol/server"
+    "@modelcontextprotocol/server": "https://github.com/modelcontextprotocol/server.git"
   }
 }
